@@ -1,3 +1,10 @@
+2020-06-29 Sergey Belyashov <sergey.belyashov@gmail.com
+
+	* src/z80/main.c
+	  src/z80/peeph-ez80_z80.def
+	  src/z80/peeph-z80n.def
+	  Implement RFE #632: Add separate peephole definition files for eZ80 and Z80N
+
 2020-06-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCpeeph.c:
